Polygon: test sphere and box3 BVHTree: box2 query